--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,8 @@ dependencies:
   #intl_utils: ^2.4.0
   intl_utils:
     git:
-      url: https://github.com/yongjhih/intl_utils.git
-      ref: c21dc36ef4ebecfafe1f0101378ba0cc83531510
+      url: https://github.com/Realank/intl_utils
+      ref: 15e490f
 
 dev_dependencies:
   build_runner: ^2.0.6
